syntax = "proto3";
import "google/protobuf/timestamp.proto";

message MessageRecord {
  string message_type = 1;
  string owner = 2;
  string message = 3;
  google.protobuf.Timestamp last_modified = 4;
}
